<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anala.cowquiz.ActivityBeginQuizP1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/goodluck_textview"
            android:text="@string/good_luck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtsize_lg"
            android:gravity="center"
            android:padding="@dimen/reg_padding"
            android:textColor="@color/colorPrimaryDark" />
        <!-- Part1 -->
        <ImageView
            android:src="@drawable/cow1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size"
            android:scaleType="centerCrop"/>

        <TextView
            android:text="@string/part1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtsize_reg"
            android:gravity="center"
            android:padding="@dimen/reg_padding"
            android:textColor="@color/colorPrimaryDark" />

        <!-- Question 1 -->
        <TextView
            android:text="@string/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A" />
            <RadioButton
                android:id="@+id/Q1_correct_answer_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1B"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1C"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1D"/>
        </RadioGroup>

        <!-- Question 2 -->

        <TextView
            android:text="@string/Q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/reg_margin"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2A" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2B"/>
            <RadioButton
                android:id="@+id/Q2_correct_answer_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2C"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2D"/>
        </RadioGroup>

        <!-- Question 3 -->

        <TextView
            android:text="@string/Q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/reg_margin"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3B"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3C"/>
            <RadioButton
                android:id="@+id/Q3_correct_answer_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3D"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="continueToPartTwo"
            android:text="@string/next" />

    </LinearLayout>

</ScrollView>
