<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anala.cowquiz.ActivityQuizP3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Part 3 -->
        <ImageView
            android:src="@drawable/cow3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size"
            android:scaleType="centerCrop"/>

        <TextView
            android:text="@string/part3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtsize_reg"
            android:gravity="center"
            android:padding="@dimen/reg_padding"
            android:textColor="@color/colorPrimaryDark" />

        <!-- Question 6 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:text="@string/Q6"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/Q6_correct_answer_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_option" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_option"/>
        </RadioGroup>

        <!-- Question 7 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:text="@string/Q7"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/reg_margin"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_option" />
            <RadioButton
                android:id="@+id/Q7_correct_answer_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_option"/>
        </RadioGroup>

        <!-- Question 8 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:text="@string/Q8"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/reg_margin" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_option" />
            <RadioButton
                android:id="@+id/Q8_correct_answer_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_option"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="continueToPartFour"
            android:text="@string/next" />

    </LinearLayout>

</ScrollView>
