<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anala.cowquiz.ActivityEndQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/reg_padding"
            android:text="@string/thanks"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txtsize_lg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/reg_padding"
            android:text="@string/score_summary_header"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtsize_reg" />

        <TextView
            android:id="@+id/score_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/reg_padding"
            android:text="@string/score_summary_preview"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtsize_reg" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="retakeQuiz"
            android:text="@string/retake" />

    </LinearLayout>

</ScrollView>
