<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.anala.cowquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size"
            android:scaleType="centerCrop"
            android:src="@drawable/cows" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/reg_padding"
            android:text="@string/question_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txtsize_lg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/reg_padding"
            android:text="@string/find_out"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtsize_reg" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reg_margin"
            android:hint="@string/name_edittext_hint"
            android:inputType="textCapSentences" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="beginQuiz"
            android:padding="@dimen/reg_padding"
            android:text="@string/begin" />
    </LinearLayout>

</ScrollView>
